<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/albumCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true">

        <ImageView
            android:id="@+id/pictureCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardview"
            android:background="@drawable/bb_bottom_bar_top_shadow"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:padding="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/albumName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/album_card"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_username_card"
                />

            <TextView
                android:id="@+id/bandName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/band_card"
                android:textColor="@android:color/white"
                android:textSize="@dimen/band_textsize_card" />

            <TextView
                android:id="@+id/albumYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/album_year_card"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </FrameLayout>

</android.support.v7.widget.CardView>